test/negative/before01.cfr
// Test for negative before constraint

a
 b ?
  c ?
  d ?
  [ before d ]

// Rao: works fine as failed to parse. 
